center canvas, random start pos

--- a/style.css
+++ b/style.css
@@ -4,4 +4,16 @@
     border-style: border-box;
     overflow-y: hidden;
     overflow-x: hidden;
+    background-color: black;
 }
+
+canvas {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+    padding: 20px;
+    text-align: center;
+  }
