--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     overflow-y: hidden;
     overflow-x: hidden;
     background-color: black;
+    font-family: 'Poppins', sans-serif;
 }
 
 canvas {
@@ -17,3 +18,50 @@ canvas {
     padding: 20px;
     text-align: center;
   }
+
+
+.newgame {
+    position: relative;
+    height: auto;
+    background-color: transparent;
+    text-align: center;
+    margin-top: 10vh;
+    color:yellow;
+    font-size: 172px;
+}
+
+.newgame input[type=submit] {
+    width:10vw;
+    height:10vh;
+    border-radius: 14px;
+    border-color: transparent;
+    background-color: rgb(245, 252, 253);
+    color: black;
+    font-size: 24px;
+    outline: none;
+    position: relative;
+    z-index: 2;
+}
+
+.newgame input[type=submit]:hover {
+    background-color: rgb(208, 255, 0);
+    color: white;
+    outline: none;
+}
+
+.newgame input[type=submit]:active {
+    background-color: rgb(0, 0, 0);
+    color: black;
+    outline: none;
+}
+
+.light {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
