--- a/style.css
+++ b/style.css
@@ -30,7 +30,13 @@ canvas {
     font-size: 172px;
 }
 
-.newgame input[type=submit] {
+.newgame #score {
+    font-size: 32px;
+}
+
+
+
+.newgame input[type=submit]#launcher {
     width:10vw;
     height:10vh;
     border-radius: 14px;
@@ -40,16 +46,31 @@ canvas {
     font-size: 24px;
     outline: none;
     position: relative;
+    opacity: 0;
     z-index: 2;
 }
 
-.newgame input[type=submit]:hover {
+.newgame input[type=submit]#fakelauncher {
+    width:10vw;
+    height:10vh;
+    border-radius: 14px;
+    border-color: transparent;
+    background-color: rgb(245, 252, 253);
+    color: black;
+    font-size: 24px;
+    outline: none;
+    position: absolute;
+    bottom:5vh;
+    left:45vw;
+}
+
+.newgame input[type=submit]#launcher:hover ~ #fakelauncher {
     background-color: rgb(208, 255, 0);
     color: white;
     outline: none;
 }
 
-.newgame input[type=submit]:active {
+.newgame input[type=submit]#launcher:active ~ #fakelauncher {
     background-color: rgb(0, 0, 0);
     color: black;
     outline: none;
@@ -65,3 +86,10 @@ canvas {
     z-index: 1;
 }
 
+#show_score {
+    position:absolute;
+    bottom:50px;
+    right:50px;
+    color: yellow;
+    font-size: 24px;
+}
