--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster+Two&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
 * {
     padding:0;
     margin: 0;
@@ -7,8 +10,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+#body {
     background:black;
+    position: absolute;
+    width:100%;
+    height:100%;
 }
 
 #bgimg {
@@ -46,14 +52,9 @@ canvas {
     
 }
 
-.newgame #score:nth-child(1) {
-    font-size: 32px;
-    
-}
-
-.newgame #score:nth-child(2) {
-    font-size: 32px;
-  
+.newgame #gamelogo{
+    font-family: 'Lobster Two', cursive;
+    letter-spacing: 10px;
 }
 
 
@@ -108,7 +109,7 @@ canvas {
 
 #show_score {
     position:absolute;
-    bottom:50px;
+    bottom:30px;
     right:50px;
     color: yellow;
     font-size: 24px;
